fix contact button alignment

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11538,10 +11538,6 @@ Onepage Homepages --------------------*/
   display: none;
 }
 
-#summary p {
-  text-align: center;
-}
-
 #summary p:first-child {
   font-size: 1.5em;
 }
